--- a/index.html
+++ b/index.html
@@ -18,70 +18,78 @@
       <div style="color: white; font-size: 20px; padding-top: 10px;">Juan Vásquez Ventura</div>
  </header>
 <body>
+    <div class="cuerpo">
     <div class="collection" style="max-width: 400px;">
-        <a href="#!" class="collection-item"><i class="material-icons">search</i></a>
-        <a href="#!" class="collection-item"><i class="material-icons">home</i>Almacen</a>
-        <a href="#!" class="collection-item"><i class="material-icons">shopping_cart</i>Compras</a>
-        <a href="#!" class="collection-item"><span class="badge">14</span>Tipo de documento</a>
-        <a href="#!" class="collection-item"><span class="badge">1</span>Ventas</a>
-        <a href="#!" class="collection-item"><span class="new badge">4</span>Inventario</a>
-        <a href="#!" class="collection-item">Usuarios </a>
-        <a href="#!" class="collection-item"><span class="badge">14</span>Reporte de Compras</a>
-        <a href="#!" class="collection-item"><span class="badge">14</span>Reportes de Ventas</a>
-        <a href="#!" class="collection-item"><span class="badge">14</span>Gráficos Estadisticos</a>
+
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">home</i>Almacen <i class="material-icons" style="padding-left:220px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;"> shopping_cart</i>Compras <i class="material-icons" style="padding-left:219px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">folder</i>Tipo de documento <i class="material-icons" style="padding-left:145px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">shopping_cart</i>Ventas <i class="material-icons"style="padding-left:230px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">folder</i>Inventario <i class="material-icons"style="padding-left:207px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">people</i>Usuarios<i class="material-icons"style="padding-left:220px; color: gray;">chevron_right</i> </a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">equalizer</i>Reporte de Compras<i class="material-icons"style="padding-left:140px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">equalizer</i>Reportes de Ventas<i class="material-icons"style="padding-left:150px; color: gray;">chevron_right</i></a>
+        <a href="#!" class="collection-item" style="color: gray;"><i class="material-icons" style="color: gray;">equalizer</i>Gráficos Estadisticos<i class="material-icons"style="padding-left:140px; color: gray;">chevron_right</i></a>
       </div>
-
-
-    <div class="container"style="max-width: 500px;">
-        <div class="row">
-            <div class="col s12 color">
-                 <h3>S/. 12.50</h3>          
-            </div>            
-        </div> 
-        <div class="row">  
-            <div class="input-field col s6">
-                <select >
-                  <option value="" disabled selected>FACTURA</option>
-                  <option value="1">Option 1</option>
-                  <option value="2">Option 2</option>
-                  <option value="3">Option 3</option>
-                </select>
-                <label>DOCUMENTO</label>
-              </div>
-              <div class="input-field col s6">
-                <select>
-                  <option value="" disabled selected>CONTADO</option>
-                  <option value="1">Option 1</option>
-                  <option value="2">Option 2</option>
-                  <option value="3">Option 3</option>
-                </select>
-                <label>TIPO DE PAGO</label>
-              </div>              
-        </div> 
-        <div class="row">
-            <div class="input-field col s6">
-                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                <label for="first_name">SERIE</label>
-              </div>
-              <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">N° DE VENTA</label>
-              </div>
-            </div>       
-        <div class="row">
-            <div class="input-field col s12">
-                <input id="password" type="date" class="validate">
-                <label for="password">Fecha de Compra</label>
-              </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <input id="proveedor" type="text" class="validate">
-                <label for="proveedor">PROVEEDOR</label>
-              </div>
-        </div>
+ <div class="parte2">
+    <div class="row">
+        <div class="col s10" style="background-color:gainsboro;height: 65px;width: 1665px;color: gray;">
+        <a href="#" style="color:gray;"></span><span class="material-icons" >home</span>Inicio</a> /Menu Principal</div>
     </div>
-
+    <main>
+        <div class="container"style="max-width: 500px;">
+            <div class="row">
+                <div class="col s12 color">
+                     <h3>S/. 12.50</h3>          
+                </div>            
+            </div> 
+            <div class="row">  
+                <div class="input-field col s6">
+                    <select >
+                      <option value="" disabled selected>FACTURA</option>
+                      <option value="1">Option 1</option>
+                      <option value="2">Option 2</option>
+                      <option value="3">Option 3</option>
+                    </select>
+                    <label>DOCUMENTO</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <select>
+                      <option value="" disabled selected>CONTADO</option>
+                      <option value="1">Option 1</option>
+                      <option value="2">Option 2</option>
+                      <option value="3">Option 3</option>
+                    </select>
+                    <label>TIPO DE PAGO</label>
+                  </div>              
+            </div> 
+            <div class="row">
+                <div class="input-field col s6">
+                    <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                    <label for="first_name">SERIE</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <input id="last_name" type="text" class="validate">
+                    <label for="last_name">N° DE VENTA</label>
+                  </div>
+                </div>       
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="password" type="date" class="validate">
+                    <label for="password">Fecha de Compra</label>
+                  </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="proveedor" type="text" class="validate">
+                    <label for="proveedor">PROVEEDOR</label>
+                  </div>
+            </div>
+        </div>
+    </main>
+ </div>
+    </div> 
+  
     <script src="js/jquery.js"></script>
     <script src="js/materialize.min.js"></script>
     <script>
